# MCP_DocExtract

./: .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  pyproject.toml  requirements.txt  run_mcp_server.py  setup_env.sh  test_mcp_client.py
src/: main.py
src/ai/: content_processor.py  link_filter.py
src/controllers/: main_controller.py
src/exporters/: interfaces.py  json_exporter.py  markdown_exporter.py
src/extractors/: interfaces.py
src/extractors/content/: deepwiki.py  generic.py
src/extractors/links/: deepwiki.py  generic.py
src/server/: api_docs.py  mcp_server.py
src/server/middleware/: __init__.py  auth.py  logging.py
src/server/schemas/: __init__.py  interface.py  mcp.py  requests.py  responses.py  tools.py
src/services/: parallel_service.py  sequential_service.py
src/utils/: logging.py
tests/: conftest.py  run_tests.py
tests/integration/: test_extraction_pipeline.py  test_simple_integration.py
tests/unit/ai/: test_content_processor.py  test_link_filter.py
tests/unit/controllers/: test_main_controller.py
tests/unit/exporters/: test_json_exporter.py  test_markdown_exporter.py
tests/unit/extractors/: test_interfaces.py
tests/unit/server/: test_mcp_server.py  test_mcp_server_updated.py
tests/unit/server/middleware/: test_auth.py
tests/unit/server/schemas/: test_interface.py  test_mcp.py  test_requests.py  test_responses.py  test_tools.py
tests/unit/utils/: test_logging.py
