[tool.poetry]
name = "doc-extract-ai"
version = "0.1.0"
description = "Documentation Extraction Tool for websites with AI-powered processing and MCP server integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.0"
playwright = "^1.34.0"
beautifulsoup4 = "^4.10.0"
pydantic = "^1.10.0"
typer = "^0.9.0"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"
openai = "^0.27.0"
asyncio = "^3.4.3"
rich = "^13.3.5"
httpx = "^0.24.0"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
doc-extract = "src.main:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
